# hip-mace

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  ruff.toml  setup.cfg  verify_amp.py
configs/: horm100.yaml  horm_100.yaml  horm_t1x.yaml
data/: sample_100.h5  sample_100.json
docs/: hip_implementation_guide.md  hip_message_passing.md
mace/calculators/: mace.py
mace/cli/: fine_tuning_select.py  run_train.py
mace/data/: atomic_data.py  hdf5_dataset.py  horm_lmdb.py  neighborhood.py  utils.py
mace/modules/: __init__.py  blocks.py  extensions.py  frequency_analysis.py  hip.py  loss.py  models.py  ocp_graph_utils.py  utils.py
mace/tools/: __init__.py  arg_parser.py  arg_parser_tools.py  checkpoint.py  default_keys.py  model_script_utils.py  multihead_tools.py  run_train_utils.py  scripts_utils.py  tables_utils.py  torch_tools.py  train.py
mace/tools/torch_geometric/: data.py  dataset.py
scripts/: convert_lmdb_to_h5.py  download_horm_data_kaggle.py  eval_horm.py  killarney.sh  run_train.py
tests/: test_amp.py  test_data.py  test_equivariance.py  test_hip.py  test_maceles.py  test_num_interactions_hessian.py
